// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receipts.add > functionality > empty receipt 1`] = `
{
  "added": {
    "receiptItems": {
      "id:7979c6e5-2b27-4ce5-96e8-ff8aa881a2f7": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "7979c6e5-2b27-4ce5-96e8-ff8aa881a2f7",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "7979c6e5-2b27-4ce5-96e8-ff8aa881a2f7",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
    "receipts": {
      "id:7979c6e5-2b27-4ce5-96e8-ff8aa881a2f7": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "ALL",
        "id": "7979c6e5-2b27-4ce5-96e8-ff8aa881a2f7",
        "issued": "2020-01-01T00:00:00.000Z",
        "name": "aliquid aperiam repellat",
        "ownerAccountId": "6b205b96-3e1f-4d5e-af8d-63a5fe2f9fca",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with consumers 1`] = `
{
  "added": {
    "receiptItemConsumers": {
      "itemId:8cc65c49-c8b6-4297-a935-a9772f5d68b4|userId:2a3adac5-54b1-411a-975a-d0f6bcd6d94c": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "itemId": "8cc65c49-c8b6-4297-a935-a9772f5d68b4",
        "part": "1.00",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "2a3adac5-54b1-411a-975a-d0f6bcd6d94c",
      },
      "itemId:8cc65c49-c8b6-4297-a935-a9772f5d68b4|userId:63519bcb-aae8-491a-be96-1416818752ac": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "itemId": "8cc65c49-c8b6-4297-a935-a9772f5d68b4",
        "part": "2.00",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "63519bcb-aae8-491a-be96-1416818752ac",
      },
    },
    "receiptItems": {
      "id:8669afe9-1540-42e5-a723-2f5667b522b9": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "8669afe9-1540-42e5-a723-2f5667b522b9",
        "name": "sunt pariatur quo",
        "price": "478.6400",
        "quantity": "90.0000",
        "receiptId": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
      "id:8900c422-074a-4ca8-81f9-118dadfcee64": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
      "id:8cc65c49-c8b6-4297-a935-a9772f5d68b4": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "8cc65c49-c8b6-4297-a935-a9772f5d68b4",
        "name": "architecto non et",
        "price": "377.2200",
        "quantity": "56.0000",
        "receiptId": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
    "receiptParticipants": {
      "receiptId:8900c422-074a-4ca8-81f9-118dadfcee64|userId:2a3adac5-54b1-411a-975a-d0f6bcd6d94c": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "receiptId": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "role": "editor",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "2a3adac5-54b1-411a-975a-d0f6bcd6d94c",
      },
      "receiptId:8900c422-074a-4ca8-81f9-118dadfcee64|userId:63519bcb-aae8-491a-be96-1416818752ac": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "receiptId": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "role": "owner",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "63519bcb-aae8-491a-be96-1416818752ac",
      },
    },
    "receipts": {
      "id:8900c422-074a-4ca8-81f9-118dadfcee64": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "GYD",
        "id": "8900c422-074a-4ca8-81f9-118dadfcee64",
        "issued": "2020-01-01T00:00:00.000Z",
        "name": "dicta atque iure",
        "ownerAccountId": "63519bcb-aae8-491a-be96-1416818752ac",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with items 1`] = `
{
  "added": {
    "receiptItems": {
      "id:2e0d96cf-3d4a-411e-973c-0c702045027f": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "2e0d96cf-3d4a-411e-973c-0c702045027f",
        "name": "dolorum quia sed",
        "price": "952.1200",
        "quantity": "75.0000",
        "receiptId": "8ad217d2-aa1a-4140-83d3-b377ed516d54",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
      "id:8ad217d2-aa1a-4140-83d3-b377ed516d54": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "8ad217d2-aa1a-4140-83d3-b377ed516d54",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "8ad217d2-aa1a-4140-83d3-b377ed516d54",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
      "id:915c4d1c-d97c-4299-aa11-0ec105bd3ba6": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "915c4d1c-d97c-4299-aa11-0ec105bd3ba6",
        "name": "libero fugit at",
        "price": "719.5500",
        "quantity": "91.0000",
        "receiptId": "8ad217d2-aa1a-4140-83d3-b377ed516d54",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
    "receipts": {
      "id:8ad217d2-aa1a-4140-83d3-b377ed516d54": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "BGN",
        "id": "8ad217d2-aa1a-4140-83d3-b377ed516d54",
        "issued": "2020-01-01T00:00:00.000Z",
        "name": "optio incidunt ab",
        "ownerAccountId": "073a60e9-c5c0-4a5b-a2db-ec411ba2025e",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with participants 1`] = `
{
  "added": {
    "receiptItems": {
      "id:80dbdf69-5ddf-4c78-bdec-93f7ed0000a1": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "80dbdf69-5ddf-4c78-bdec-93f7ed0000a1",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "80dbdf69-5ddf-4c78-bdec-93f7ed0000a1",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
    "receiptParticipants": {
      "receiptId:80dbdf69-5ddf-4c78-bdec-93f7ed0000a1|userId:ee0798e0-559e-4bf0-8d89-a07af856aa2f": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "receiptId": "80dbdf69-5ddf-4c78-bdec-93f7ed0000a1",
        "role": "editor",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "ee0798e0-559e-4bf0-8d89-a07af856aa2f",
      },
      "receiptId:80dbdf69-5ddf-4c78-bdec-93f7ed0000a1|userId:f2fab689-ac19-474e-b15b-c90bb158b1a3": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "receiptId": "80dbdf69-5ddf-4c78-bdec-93f7ed0000a1",
        "role": "owner",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "f2fab689-ac19-474e-b15b-c90bb158b1a3",
      },
    },
    "receipts": {
      "id:80dbdf69-5ddf-4c78-bdec-93f7ed0000a1": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "UGX",
        "id": "80dbdf69-5ddf-4c78-bdec-93f7ed0000a1",
        "issued": "2020-01-01T00:00:00.000Z",
        "name": "atque assumenda delectus",
        "ownerAccountId": "f2fab689-ac19-474e-b15b-c90bb158b1a3",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`receipts.add > functionality > receipt with payers 1`] = `
{
  "added": {
    "receiptItemConsumers": {
      "itemId:272764d2-5de2-4742-a111-7e66ffb995f2|userId:60b2fa20-4a9e-4c16-9da2-1ed76299dd7d": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "itemId": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "part": "22.00",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "60b2fa20-4a9e-4c16-9da2-1ed76299dd7d",
      },
      "itemId:272764d2-5de2-4742-a111-7e66ffb995f2|userId:91085ca0-17c5-4268-9da7-bb75dd229df3": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "itemId": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "part": "1.00",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "91085ca0-17c5-4268-9da7-bb75dd229df3",
      },
    },
    "receiptItems": {
      "id:272764d2-5de2-4742-a111-7e66ffb995f2": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "id": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "name": "",
        "price": "0.0000",
        "quantity": "0.0000",
        "receiptId": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
    "receiptParticipants": {
      "receiptId:272764d2-5de2-4742-a111-7e66ffb995f2|userId:60b2fa20-4a9e-4c16-9da2-1ed76299dd7d": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "receiptId": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "role": "owner",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "60b2fa20-4a9e-4c16-9da2-1ed76299dd7d",
      },
      "receiptId:272764d2-5de2-4742-a111-7e66ffb995f2|userId:91085ca0-17c5-4268-9da7-bb75dd229df3": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "receiptId": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "role": "editor",
        "updatedAt": "2020-01-01T00:00:00.000Z",
        "userId": "91085ca0-17c5-4268-9da7-bb75dd229df3",
      },
    },
    "receipts": {
      "id:272764d2-5de2-4742-a111-7e66ffb995f2": {
        "createdAt": "2020-01-01T00:00:00.000Z",
        "currencyCode": "IQD",
        "id": "272764d2-5de2-4742-a111-7e66ffb995f2",
        "issued": "2020-01-01T00:00:00.000Z",
        "name": "vitae ea porro",
        "ownerAccountId": "60b2fa20-4a9e-4c16-9da2-1ed76299dd7d",
        "updatedAt": "2020-01-01T00:00:00.000Z",
      },
    },
  },
}
`;

exports[`receipts.add > input verification > inner fails > participants errors 1`] = `{}`;

exports[`receipts.add > input verification > inner fails > parts fail 1`] = `{}`;

exports[`receipts.add > input verification > inner fails > payers errors 1`] = `{}`;
